--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta content="" name="description">
   <meta content="" name="author">
   <title>GMF Aero Asia General Affairs Application</title>
+  <link href="./images/tablogo.png" rel="shortcut icon">
 
   <link href="bs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -89,7 +90,7 @@
 		dan menyediakan alat yang dibutuhkan.</p>
         <p>Dalam upaya memberikan dukungan kepada departement anda kami melakukan pembaruan untuk meningkatkan kualitas dan produktivitas di lingkungan kerja GMF Aero Asia</p>
       </div>
-      <div align="center" class="col-lg-6"><img alt="Zimbabwe Coat of Arms" class="img-fluid rounded" src="./images/beranda.png"></div>
+      <div align="center" class="col-lg-6"><img alt="GMF AeroAsia General Affairs" class="img-fluid rounded" src="./images/beranda.png"></div>
     </div><!-- /.row -->
     <br>
     <br>
