--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
   <meta name="author" content="">
 
   <title>Contact Us</title>
+  <link href="./images/tablogo.png" rel="shortcut icon">
 
 
   <link href="bs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -88,16 +89,16 @@
             on the below communication channels.
           </p>
           <p>
-            <strong>Call:</strong> +263 4 555 555
+            <strong>Call:</strong> (021) 5508717
           </p>
           <p>
-            <strong>Email:</strong> info@registrars.co.zw
+            <strong>Email:</strong> corporatecommunications@gmf-aeroasia.co.id 
           </p>
           <p>
             <p>
               <strong>Address</strong>
             </p>
-            13 Stortford Lane, Harare CBD, Zimbabwe
+            Jl. GMF Aeroasia, RT.001/RW.010, Pajang, Kec.Benda, Kota Tangerang, Banten 15126
           </p>
         </div>
       </div>
@@ -114,12 +115,11 @@
 
         <div class="col-lg-6 mt-md-0 mt-3">
 
-          <h5 class="text-uppercase foot" style="color: white">The Department you can trust</h5>
+          <h5 class="text-uppercase foot" style="color: white">GMF Aeroasia - General Affairs</h5>
           <br>
-          <p class="foot" style="color: white">If you encounter any problems while using this site, please don't
-            hesitate to contact the
-            department to
-            give your feeback</p>
+          <p class="foot" style="color: white">Jika anda mengalami kesulitan dalam menggunakan website ini, jangan
+            ragu untuk menghubungi kami.
+          </p>
         </div>
         <hr class="clearfix w-100 d-md-none pb-3">
 
@@ -127,7 +127,7 @@
 
         <div class="col-md-3 mb-md-0 mb-3">
 
-          <h5 class="text-uppercase foot" style="color:white">Links</h5>
+          <h5 class="text-uppercase foot" style="color:white"> Menu</h5>
           <ul class="list-unstyled">
             <li>
               <a href="index.html">Home</a>
@@ -147,7 +147,7 @@
     </div>
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3 foot" style="color: white">
-      © 2018 Copyright: <a href="#">Zimbabwe Department of Immigration</a>
+      © 2022 Copyright: <a href="#">GMF Aero Asia - General Affairs Department</a>
     </div>
   </footer>
   <!-- Footer -->
