--- a/passportapp.html
+++ b/passportapp.html
@@ -9,6 +9,7 @@
   <meta name="author" content="">
 
   <title>Passport Application</title>
+  <link href="./images/tablogo.png" rel="shortcut icon">
   <link href="bs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="/css/styles.css" rel="stylesheet">
 
