--- a/team.html
+++ b/team.html
@@ -9,6 +9,7 @@
   <meta name="author" content="">
 
   <title>Our Team</title>
+  <link href="./images/tablogo.png" rel="shortcut icon">
 
 
   <link href="bs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
