--- a/vision.html
+++ b/vision.html
@@ -7,6 +7,7 @@
   <meta content="" name="description">
   <meta content="" name="author">
   <title>Vision & Mission</title>
+  <link href="./images/tablogo.png" rel="shortcut icon">
 
   <link href="bs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
