--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true"
               aria-expanded="false">
-              About US
+              Layanan
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
               <a class="dropdown-item" href="vision.html">Vision & Mission</a>
@@ -44,10 +44,18 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="registration.php">Application</a>
+            <a class="nav-link" href="passportapp.html">Application</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true"
+              aria-expanded="false">
+              About US
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
+              <a class="dropdown-item" href="vision.html">Vision & Mission</a>
+              <a class="dropdown-item" href="team.html">Team</a>
+              <a class="dropdown-item" href="contact.html"></a>
+            </div>
           </li>
         </ul>
       </div>
