--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container">
       <a class="navbar-brand" href="index.html"><img src="./images/logo.png" alt="Registrer General Logo" /></a>
+      <a class="navbar-brand" href="index.html"><img src="./images/logobumn.png" alt="Registrer bumn Logo" /></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
         aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -32,7 +33,7 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true"
               aria-expanded="false">
-              About US
+              Layanan
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
               <a class="dropdown-item" href="vision.html">Vision & Mission</a>
@@ -40,10 +41,18 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="registration.php">Application</a>
+            <a class="nav-link" href="passportapp.html">Application</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true"
+              aria-expanded="false">
+              About US
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
+              <a class="dropdown-item" href="vision.html">Vision & Mission</a>
+              <a class="dropdown-item" href="team.html">Team</a>
+              <a class="dropdown-item" href="contact.html"></a>
+            </div>
           </li>
         </ul>
       </div>
