Update Submission Form

--- a/passportapp.html
+++ b/passportapp.html
@@ -480,7 +480,7 @@
 
             <!-- ID-->
             <div class="form-group">
-              <label class=" control-label" for="filebutton">Upload scanned and certified copy of National ID</label>
+              <label class=" control-label" for="filebutton">Upload your latest photo</label>
               <div class="">
                 <input id="filebutton" name="idcopy" class="input-file" type="file">
               </div>
@@ -488,7 +488,7 @@
 
             <!-- Birth -->
             <div class="form-group">
-              <label class=" control-label" for="filebutton">Upload Copy of Birth Certificate</label>
+              <label class=" control-label" for="filebutton">Upload scanned and certified copy of National ID</label>
               <div class="">
                 <input id="filebutton" name="birthcopy" class="input-file" type="file">
               </div>
@@ -496,7 +496,7 @@
 
             <!-- Previous Pass -->
             <div class="form-group">
-              <label class=" control-label" for="passcopy">Upload Scan of Previous Passport if available</label>
+              <label class=" control-label" for="passcopy">Upload Scan of Passport or Previous Visa</label>
               <div class="">
                 <input id="filebutton" name="filebutton" class="input-file" type="file">
               </div>
