--- a/passportapp.html
+++ b/passportapp.html
@@ -16,9 +16,11 @@
 </head>
 
 <!-- Navigation -->
+<!-- Navigation -->
 <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light fixed-top">
   <div class="container">
     <a class="navbar-brand" href="index.html"><img src="./images/logo.png" alt="Registrer General Logo" /></a>
+    <a class="navbar-brand" href="index.html"><img src="./images/logobumn.png" alt="Registrer bumn Logo" /></a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
       aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -49,7 +51,7 @@
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
             <a class="dropdown-item" href="vision.html">Vision & Mission</a>
             <a class="dropdown-item" href="team.html">Team</a>
-            <a class="dropdown-item" href="contact.html"></a>
+            <a class="dropdown-item" href="contact.html">Contact Us</a>
           </div>
         </li>
       </ul>
