Second Header Fix

--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
               <a class="dropdown-item" href="vision.html">Vision & Mission</a>
               <a class="dropdown-item" href="team.html">Team</a>
-              <a class="dropdown-item" href="contact.html"></a>
+              <a class="dropdown-item" href="contact.html">Contact Us</a>
             </div>
           </li>
         </ul>
