penambahan form layanan

--- a/bicycle.html
+++ b/bicycle.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Our Team</title>
+  <title>Bicycle</title>
   <link href="./images/tablogo.png" rel="shortcut icon">
 
 
@@ -20,13 +20,10 @@
 </head>
 
 <body>
-
-  <!-- Navigation -->
   <!-- Navigation -->
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container">
       <a class="navbar-brand" href="index.html"><img src="./images/logo.png" alt="Registrer General Logo" /></a>
-      <a class="navbar-brand" href="index.html"><img src="./images/logobumn.png" alt="Registrer bumn Logo" /></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
         aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -67,56 +64,65 @@
 
     </div>
   </nav>
+
   <!--End Navigation-->
-  <div class="row" align='center'>
-    <div class="col col-12">
-      <div class="jumbotron">
-        <h1>Our Team</h1>
-        <br>
-        <p>
-          As the Dev Team at the GMF Aero Asia General Affairs Department, we are dedicated to deliver the best ever quality
-          software
-          products to make it easy for Employee to get the best ever service that is convient when getting their
-          need.
-        </p>
-        <p>
-          Here is the team behind this site:
-        </p>
+
+  <body>
+    <br>
+    <br>
+    <div class="container">
+      <div class="row">
+        <div class="col-8">
+          <form>
+            <div class="form-group">
+              <label for="Email Adress">Nama</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Masukkan Nama anda">
+            </div>
+            <div class="form-group">
+              <label for="Email Adress">Id Sepeda</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+              <small id="emailHelp" class="form-text text-muted">Pastikan ID sepeda sesuai dengan yang anda miliki
+              </small>
+            </div>
+            <div class="form-group">
+              <label for="Email Adress">Jenis Sepeda</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Masukkan Jenis sepeda anda">
+            </div>
+            <div class="form-group">
+                <label for="Email Adress">Unit Kerja</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Masukkan Unit Kerja Anda">
+            </div>
+            <div class="form-group">
+                <label for="Email Adress">PIC</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Masukkan Nama Penanggung Jawab">
+            </div>
+            <button type="submit" class="btn btn-dark">Submit</button>
+          </form>
+
+        </div>
+        <div class="col-4">
+          <p>For questions and other communications and enquiries, you can reach the registrar's Department either
+            using the form above or
+            on the below communication channels.
+          </p>
+          <p>
+            <strong>Call:</strong> (021) 5508717
+          </p>
+          <p>
+            <strong>Email:</strong> corporatecommunications@gmf-aeroasia.co.id 
+          </p>
+          <p>
+            <p>
+              <strong>Address</strong>
+            </p>
+            Jl. GMF Aeroasia, RT.001/RW.010, Pajang, Kec.Benda, Kota Tangerang, Banten 15126
+          </p>
+        </div>
       </div>
     </div>
-  </div>
+    <br>
+  </body>
 
-  <div class="container">
-
-    <div class="row">
-      <div class="col col-lg-4">
-        <div class="img img-thumbnail">
-          <img src="./images/Juni Purwo Widadi.png" alt="Juni Purwo Widadi">
-          <p><strong>Juni Purwo Widadi</strong></p>
-          <p style="color: green;"><i>Project Supervisor</i></p>
-		  <p style="color: green;"><i>Home Affairs Manager at GMF Aero Asia</i></p>
-        </div>
-      </div>
-      <div class="col col-lg-4">
-        <div class="img img-thumbnail">
-          <img src="./images/Raden Ricky Rachmady.png" alt="Raden Ricky Rachmady">
-          <p><strong>Raden Ricky Rachmady</strong></p>
-          <p style="color: green;"><i>Project Manager</i></p>
-		  <p style="color: green;"><i>Customer Care Team Lead at GMF AeroAsia</i></p>
-        </div>
-      </div>
-      <div class="col col-lg-4">
-        <div class="img img-thumbnail">
-          <img src="./images/Ahmad Bisyrul Hafi.png" alt="Ahmad Bisyrul Hafi">
-          <p><strong>Ahmad Bisyrul Hafi</strong></p>
-          <p style="color: green;"><i>Web Developer</i></p>
-		  <p style="color: green;"><i>Programmers Intern At GMF Aero Asia</i></p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <br>
   <!-- Footer -->
   <footer class="page-footer font-small bg-dark pt-4">
     <!-- Footer Links -->
@@ -126,9 +132,11 @@
 
         <div class="col-lg-6 mt-md-0 mt-3">
 
-          <h5 class="text-uppercase foot" style="color: white">GMF Aero Asia General Affairs Department</h5>
+          <h5 class="text-uppercase foot" style="color: white">GMF Aeroasia - General Affairs</h5>
           <br>
-          <p class="foot" style="color: white">Jika anda memiliki kesulitan dalam mengakses website ini jangan ragu untuk mengubungi kami untuk menyampaikan keluhan anda</p>
+          <p class="foot" style="color: white">Jika anda mengalami kesulitan dalam menggunakan website ini, jangan
+            ragu untuk menghubungi kami.
+          </p>
         </div>
         <hr class="clearfix w-100 d-md-none pb-3">
 
@@ -136,7 +144,7 @@
 
         <div class="col-md-3 mb-md-0 mb-3">
 
-          <h5 class="text-uppercase foot">Menu</h5>
+          <h5 class="text-uppercase foot" style="color:white"> Menu</h5>
           <ul class="list-unstyled">
             <li>
               <a href="index.html">Home</a>
@@ -156,7 +164,7 @@
     </div>
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3 foot" style="color: white">
-      © 2022 Copyright: <a href="#">GMF Aero Asia General Affairs Department</a>
+      © 2022 Copyright: <a href="#">GMF Aero Asia - General Affairs Department</a>
     </div>
   </footer>
   <!-- Footer -->
@@ -164,6 +172,11 @@
   <!-- Bootstrap core JavaScript -->
   <script src="bs/jquery/jquery.min.js"></script>
   <script src="bs/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Contact form JavaScript -->
+  <!-- Do not edit these files! In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
+  <script src="js/jqBootstrapValidation.js"></script>
+  <script src="js/contact_me.js"></script>
 
 </body>
 
