--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
               Layanan
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
-              <a class="dropdown-item" href="vision.html">Vision & Mission</a>
-              <a class="dropdown-item" href="team.html">Team</a>
+              <a class="dropdown-item" href="vehicle.html">Vehicle</a>
+              <a class="dropdown-item" href="bicycle.html">Bicycle</a>
+              <a class="dropdown-item" href="passportapp.html">Immigration</a>
+              <a class="dropdown-item" href="eventsupport.html">Event Support</a>
             </div>
           </li>
           <li class="nav-item">
