--- a/vision.html
+++ b/vision.html
@@ -37,8 +37,10 @@
               Layanan
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
-              <a class="dropdown-item" href="vision.html">Vision & Mission</a>
-              <a class="dropdown-item" href="team.html">Team</a>
+              <a class="dropdown-item" href="vehicle.html">Vehicle</a>
+              <a class="dropdown-item" href="bicycle.html">Bicycle</a>
+              <a class="dropdown-item" href="passportapp.html">Immigration</a>
+              <a class="dropdown-item" href="eventsupport.html">Event Support</a>
             </div>
           </li>
           <li class="nav-item">
@@ -84,7 +86,7 @@
           </h3>
           <div class="panel-body">
             <p>
-              To be the centre of excellence in the production of travel and vital civil registration documents
+              “Top 10 MROs In The World” 
             </p>
           </div>
         </div>
@@ -96,9 +98,7 @@
           </h3>
           <div class="panel-body">
             <p>
-              To deliver efficient service in the processing of births and deaths, registration of brands, marriages,
-              citizenship, national identity documents, designing, manufacturing, processing and issuance of travel
-              documents.
+              “To provide integrated and reliable aircraft maintenance solution for asafer sky and secured quality of life of mankind”
             </p>
           </div>
         </div>
