--- a/bicycle.html
+++ b/bicycle.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Bicycle</title>
+  <title>Vehicle</title>
   <link href="./images/tablogo.png" rel="shortcut icon">
 
 
@@ -41,7 +41,7 @@
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
               <a class="dropdown-item" href="vehicle.html">Vehicle</a>
               <a class="dropdown-item" href="bicycle.html">Bicycle</a>
-              <a class="dropdown-item" href="passportapp.html">Immigration</a>
+              <a class="dropdown-item" href="passportapp.html">Passport&Visa</a>
               <a class="dropdown-item" href="eventsupport.html">Event Support</a>
             </div>
           </li>
@@ -73,31 +73,55 @@
         <div class="col-8">
           <form>
             <div class="form-group">
-              <label for="Email Adress">Nama</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Masukkan Nama anda">
+                <label for="Email Adress">Nama : </label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Masukkan Nama Anda">
+                <small id="emailHelp" class="form-text text-muted">Pastikan anda memasukkan nama anda dengan benar
+                </small>
+              </div>
+            <div class="form-group">
+              <label for="Email Adress">Jenis Sepeda : </label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Masukkan Jenis Sepeda">
             </div>
             <div class="form-group">
-              <label for="Email Adress">Id Sepeda</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-              <small id="emailHelp" class="form-text text-muted">Pastikan ID sepeda sesuai dengan yang anda miliki
-              </small>
-            </div>
-            <div class="form-group">
-              <label for="Email Adress">Jenis Sepeda</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Masukkan Jenis sepeda anda">
-            </div>
-            <div class="form-group">
-                <label for="Email Adress">Unit Kerja</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Masukkan Unit Kerja Anda">
-            </div>
-            <div class="form-group">
-                <label for="Email Adress">PIC</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Masukkan Nama Penanggung Jawab">
+              <label for="Email Adress">Unit Kerja : </label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Unit Kerja, e.g. TUG,TUS,TUF,TUK">
             </div>
             <button type="submit" class="btn btn-dark">Submit</button>
           </form>
-
         </div>
+
+        <div class="form-horizontal jumbotron" id="documents">
+          <fieldset>
+
+            <!-- Form Name -->
+            <legend>Documents</legend>
+
+            <!--Natoinal ID-->
+            <div class="form-group">
+              <label class=" control-label" for="filebutton">OLA dari SM Unit Terkait</label>
+              <div class="">
+                <input id="filebutton" name="idcopy" class="input-file" type="file">
+              </div>
+            </div>
+
+            <!-- Kartu Keluarga -->
+            <div class="form-group">
+              <label class=" control-label" for="filebutton">Surat Pembelian Sepeda</label>
+              <div class="">
+                <input id="filebutton" name="birthcopy" class="input-file" type="file">
+              </div>
+            </div>
+
+            <!-- Akta Kelahiran -->
+            <div class="form-group">
+              <label class=" control-label" for="passcopy">Surat Pernyataan dari TUS</label>
+              <div class="">
+                <input id="filebutton" name="filebutton" class="input-file" type="file">
+              </div>
+            </div>
+          </fieldset>
+        </div>
+
         <div class="col-4">
           <p>For questions and other communications and enquiries, you can reach the registrar's Department either
             using the form above or
