--- a/contact.html
+++ b/contact.html
@@ -41,8 +41,8 @@
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
               <a class="dropdown-item" href="vehicle.html">Vehicle</a>
               <a class="dropdown-item" href="bicycle.html">Bicycle</a>
-              <a class="dropdown-item" href="passportapp.html">Immigration</a>
-              <a class="dropdown-item" href="team.html">Event Support</a>
+              <a class="dropdown-item" href="passportapp.html">Passport&Visa</a>
+              <a class="dropdown-item" href="eventsupport.html">Event Support</a>
             </div>
           </li>
           
@@ -73,8 +73,8 @@
         <div class="col-8">
           <form>
             <div class="form-group">
-              <label for="Email Adress">Name</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Your Name">
+              <label for="name">Name</label>
+              <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Your Name">
             </div>
             <div class="form-group">
               <label for="Email Adress">Email address</label>
@@ -85,7 +85,7 @@
             </div>
             <div class="form-group">
               <label for="Email Adress">Message</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Please Enter Your Message">
+              <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Please Enter Your Message">
             </div>
             <button type="submit" class="btn btn-dark">Submit</button>
           </form>
