--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
               <a class="dropdown-item" href="vehicle.html">Vehicle</a>
               <a class="dropdown-item" href="bicycle.html">Bicycle</a>
-              <a class="dropdown-item" href="passportapp.html">Immigration</a>
+              <a class="dropdown-item" href="passportapp.html">Passport&Visa</a>
               <a class="dropdown-item" href="eventsupport.html">Event Support</a>
             </div>
           </li>
