--- a/vision.html
+++ b/vision.html
@@ -39,11 +39,11 @@
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
               <a class="dropdown-item" href="vehicle.html">Vehicle</a>
               <a class="dropdown-item" href="bicycle.html">Bicycle</a>
-              <a class="dropdown-item" href="passportapp.html">Immigration</a>
+              <a class="dropdown-item" href="passportapp.html">Passport&Visa</a>
               <a class="dropdown-item" href="eventsupport.html">Event Support</a>
             </div>
           </li>
-          
+
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true"
               aria-expanded="false">
